RESOLVED FIXED48849
Assertion hit in WebProcessProxy::~WebProcessProxy()
https://bugs.webkit.org/show_bug.cgi?id=48849
Summary Assertion hit in WebProcessProxy::~WebProcessProxy()
Anders Carlsson
Reported 2010-11-02 10:47:12 PDT
Assertion hit in WebProcessProxy::~WebProcessProxy()
Attachments
Patch (1.15 KB, patch)
2010-11-02 10:48 PDT, Anders Carlsson
sullivan: review+
Anders Carlsson
Comment 1 2010-11-02 10:47:59 PDT
Anders Carlsson
Comment 2 2010-11-02 10:48:48 PDT
John Sullivan
Comment 3 2010-11-02 10:49:39 PDT
Comment on attachment 72696 [details] Patch ChangeLog should mention why the assertion is no longer valid (or that it never was).
Anders Carlsson
Comment 4 2010-11-02 10:51:34 PDT
Note You need to log in before you can comment on or make changes to this bug.