Assertion hit in WebProcessProxy::~WebProcessProxy() https://bugs.webkit.org/show_bug.cgi?id=48849 <rdar://problem/8617676>

Reviewed by John Sullivan.

It is perfectly valid for the page map to contain pages if the web process proxy
goes away, this can happen if the process crashes for example.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::~WebProcessProxy):
Remove the assertion.

git-svn-id: svn://svn.chromium.org/blink/trunk@71129 bbb929c8-8fbe-4397-9dbb-9b2b20218538