third_party/WebKit/WebKit2/UIProcess/WebProcessProxy.cpp
@@ -64,8 +64,6 @@ WebProcessProxy::WebProcessProxy(WebContext* context)
 
 WebProcessProxy::~WebProcessProxy()
 {
-    ASSERT(m_pageMap.isEmpty());
-
     if (m_connection)
         m_connection->invalidate();
     
